--- a/public/donation.html
+++ b/public/donation.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Green Tree Initiative">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <link  href="../css/donation.css" rel="stylesheet">
+    <link  href="./css/donation.css" rel="stylesheet">
     
     <title>
         Green Tree Initiative
