change nav link

--- a/public/donation.html
+++ b/public/donation.html
@@ -89,7 +89,7 @@
             <p class="full-width head">Click the button to confirm your donation of $10, recurring monthly.</p>
             <div class="bottom-form">
                     <nav>
-                        <a href="homepage.html">Go back</a>
+                        <a href="index.html">Go back</a>
                       </nav>
                     <div class="payment-btn">
                         <input type="submit" value="Process Payment" id="button">
