--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,12 @@
         <div id="title">
           <h3>The Green Trees Initiative</h3>
         </div>
-        <nav>
+        <nav id="nav1">
             <a href="about.html" class="nav-link">About us</a>
             <a href="#stories" class="nav-link">Our stories</a>
             <a href="#news_and_events" class="nav-link">News and events</a>
+        </nav>
+        <nav id="nav2">
             <a href="donation.html"><button id="donate-btn">Donate Today</button></a>
         </nav>
       </div>
@@ -167,8 +169,8 @@
     <section id="subscribe">
       <div class="container">
         <h3>Subscribe to our monthly newsletter and stay up to date with all news and events.</h3>
-        <div><input type="text" placeholder="Enter your email address">
-          <button>Read more</button></div>
+        <input type="text" placeholder="Enter your email address">
+          <button>Read more</button>
       </div>
     </section>
     
